Fill swagger and some fixes for metadata upload
