# lib/td_dd/data_structures/data_field.ex
@@ -29,8 +29,8 @@ defmodule TdDd.DataStructures.DataField do
   @doc false
   def changeset(%DataField{} = data_field, attrs) do
     data_field
-    |> cast(attrs, [:name, :type, :precision, :nullable, :description, :business_concept_id, :data_structure_id, :last_change_at, :last_change_by])
-    |> validate_required([:name, :data_structure_id, :last_change_at, :last_change_by])
+    |> cast(attrs, [:name, :type, :precision, :nullable, :description, :business_concept_id, :data_structure_id, :last_change_at, :last_change_by, :metadata])
+    |> validate_required([:name, :data_structure_id, :last_change_at, :last_change_by, :metadata])
     |> validate_length(:name, max: 255)
     |> validate_length(:business_concept_id, max: 255)
     |> foreign_key_constraint(:data_structure_id)
