# lib/td_dd/data_structures/data_structure.ex
@@ -30,8 +30,8 @@ defmodule TdDd.DataStructures.DataStructure do
   @doc false
   def changeset(%DataStructure{} = data_structure, attrs) do
     data_structure
-    |> cast(attrs, [:system, :group, :name, :description, :last_change_at, :last_change_by, :type, :ou, :lopd])
-    |> validate_required([:system, :group, :name, :last_change_at, :last_change_by])
+    |> cast(attrs, [:system, :group, :name, :description, :last_change_at, :last_change_by, :type, :ou, :lopd, :metadata])
+    |> validate_required([:system, :group, :name, :last_change_at, :last_change_by, :metadata])
     |> validate_length(:system, max: 255)
     |> validate_length(:group,  max: 255)
     |> validate_length(:name,   max: 255)
